force-app/main/default/objects/Contact/fields/PartnerType__c.field-meta.xml
<CustomField>
    <fullName>PartnerType__c</fullName>
    <description>AMS : 연락처의 소속이 필요</description>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HQ</fullName>
                <label>본사직원</label>
            </value>
            <value>
                <fullName>Partner</fullName>
                <label>대리점직원</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>