force-app/main/default/objects/Contact/fields/Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Responsibility__c</fullName>
    <label>Responsibility</label>
    <length>100</length>
    <type>Text</type>
</CustomField>